--- a/english-assistent-frontend/package.json
+++ b/english-assistent-frontend/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.3",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
