--- a/english-assistant-frontend/package.json
+++ b/english-assistant-frontend/package.json
@@ -21,7 +21,9 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.6",
