--- a/english-assistant-frontend/package.json
+++ b/english-assistant-frontend/package.json
@@ -53,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0"
   }
 }
